<resources>
    <string name="app_name">Clinical Journal</string>

    <!-- Vista de login -->
    <string name="button_entrar">Entrar</string>
    <string name="button_registrarse">Registrarse</string>

    <!-- Vista de registrarse -->
    <string name="edittext_registerview_nombres">Nombres</string>
    <string name="edittext_registerview_apellidos">Apellidos</string>
    <string name="edittext_registerview_email">Email</string>
    <string name="edittext_registerview_password">Contraseña</string>
    <string name="edittext_registerview_telefono">Telefono</string>
    <string name="edittext_registerview_infoAdicional">Informacion adicional</string>
    <string name="button_registrarme">Registrarme</string>

    <!-- Vista de menu pacientes -->
    <string name="textview_bienvenidoPac">Bienvenido Paciente</string>
    <string name="textview_opcion1menupacientes">Crear cita con especialista</string>
    <string name="textview_opcion2menupacientes">Ver citas</string>
    <string name="textview_opcion3menupacientes">Ver informacion de los especialistas</string>

    <!-- Vista de menu doctores -->
    <string name="textview_bienvenidoDoc">Bienvenido Doctor</string>
    <string name="textview_opcion1menudoctores">Crear citas</string>
    <string name="textview_opcion2menudoctores">Ver citas</string>
    <string name="textview_opcion3menudoctores">Ver informacion de pacientes</string>

    <!--Vista de Crear Citas rol Doctor-->
    <string name="textview_telefonoPaciente">Ingrese numero de telefono</string>
    <string name="textview_nombrePaciente">Nombre del paciente</string>

    <!-- Vista de Crear Citas rol Paciente-->
    <string name="textview_crearcita">Crear Cita</string>
    <string name="textview_especialidad">Seleccione la especialidad</string>
    <string name="textview_doctor">Seleccione el doctor</string>
    <string name="textview_fecha">ingrese la fecha de su cita</string>
    <string name="textview_hora">Elija una hora</string>
    <string name="textview_detalle">Ingrese detalles(si presenta sintomas)</string>
    <string name="boton_guardarCita">Crear Cita</string>

    <!-- Vista de ver listado de doctores del usuario Paciente -->
    <string name="textview_titleShowDoctors">Ver listado de Doctores</string>

    <!-- Vista de ver listado de pacientes del usuario Doctor -->
    <string name="textview_titleShowPatients">Ver listado de Pacientes</string>


</resources>