<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/scrollView"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="16dp"
        tools:context=".CreateDatePatiente">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-black"
                android:gravity="center"
                android:padding="3mm"
                android:text="@string/textview_crearcita"
                android:textSize="24dp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/textview_telefonoPaciente"
                android:textSize="20dp"
                android:padding="3mm"/>

            <EditText
                android:id="@+id/editTextPhone"
                android:layout_width="match_parent"
                android:layout_height="8mm"
                android:ems="10"
                android:inputType="phone" />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/textview_nombrePaciente"
                android:textSize="20dp"
                android:padding="3mm"/>
            <TextView
                android:id="@+id/edtPatientName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:textSize="20dp"
                android:padding="3mm"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/textview_fecha"
                android:textSize="20dp"
                android:padding="3mm"/>

            <EditText
                android:id="@+id/editTextDate"
                android:layout_width="55mm"
                android:layout_height="8mm"
                android:layout_gravity="center"
                android:ems="10"
                android:inputType="date" />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/textview_hora"
                android:textSize="20dp"
                android:padding="3mm"/>
            <Spinner
                android:id="@+id/spHora"
                android:layout_width="55mm"
                android:layout_height="8mm"
                android:layout_gravity="center"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/textview_detalle"
                android:textSize="20dp"
                android:padding="3mm"/>

            <EditText
                android:id="@+id/editTextTextMultiLine"
                android:layout_width="55mm"
                android:layout_height="12mm"
                android:ems="10"
                android:gravity="start|top"
                android:inputType="textMultiLine"
                tools:layout_editor_absoluteX="70dp"
                tools:layout_editor_absoluteY="647dp" />
            <Button
                android:id="@+id/btSaveDateP"
                android:layout_width="55mm"
                android:layout_height="8mm"
                android:layout_gravity="center"
                android:text="@string/boton_guardarCita"
                />
        </LinearLayout>



    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>