<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:backgroundTint="@color/white"
    tools:context=".RegisterScreen">

    <EditText
        android:id="@+id/txtRegisterPass"
        android:layout_width="286dp"
        android:layout_height="40dp"
        android:layout_marginStart="60dp"
        android:layout_marginTop="380dp"
        android:ems="10"
        android:hint="@string/edittext_registerview_password"
        android:inputType="textPassword"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/txtRegisterEmail"
        android:layout_width="284dp"
        android:layout_height="44dp"
        android:layout_marginStart="60dp"
        android:layout_marginTop="324dp"
        android:ems="10"
        android:hint="@string/edittext_registerview_email"
        android:inputType="textPersonName"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/txtRegisterName"
        android:layout_width="284dp"
        android:layout_height="44dp"
        android:layout_marginStart="60dp"
        android:layout_marginTop="200dp"
        android:ems="10"
        android:hint="@string/edittext_registerview_nombres"
        android:inputType="textPersonName"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/txtRegisterLastname"
        android:layout_width="284dp"
        android:layout_height="44dp"
        android:layout_marginStart="60dp"
        android:layout_marginTop="268dp"
        android:ems="10"
        android:hint="@string/edittext_registerview_apellidos"
        android:inputType="textPersonName"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/txtRegisterPhone"
        android:layout_width="285dp"
        android:layout_height="41dp"
        android:layout_marginStart="60dp"
        android:layout_marginTop="436dp"
        android:ems="10"
        android:hint="@string/edittext_registerview_telefono"
        android:inputType="number"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/txtRegisterDetails"
        android:layout_width="288dp"
        android:layout_height="89dp"
        android:layout_marginStart="60dp"
        android:layout_marginTop="556dp"
        android:ems="10"
        android:gravity="start|top"
        android:hint="@string/edittext_registerview_padecimientos"
        android:inputType="textMultiLine"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btnRegister"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="132dp"
        android:layout_marginTop="664dp"
        android:text="@string/button_registrarme"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="255dp"
        android:layout_height="40dp"
        android:layout_marginStart="60dp"
        android:layout_marginTop="500dp"
        android:text="Describir su historial medico o padecimientos actuales."
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imageView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="140dp"
        android:layout_marginTop="36dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_add_user" />

</androidx.constraintlayout.widget.ConstraintLayout>